Add work section

--- a/index.html
+++ b/index.html
@@ -79,12 +79,39 @@
             </div>
         </header>
         <section>
-            <div class="section-about">
+            <div class="section-wrapper">
                 <div class="section-header">
                     <div class="section-header-line"></div>
                     <div class="section-header-title ">About me</div>
                 </div>
-                <div class="section-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</div>
+                <div class="section-content section-about-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</div>
+                <div class="section-footer"></div>
+            </div>
+            <div class="section-wrapper">
+                <div class="section-header">
+                    <div class="section-header-line"></div>
+                    <div class="section-header-title ">Work</div>
+                </div>
+                <div class="section-content section-work-content">
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/antena.jpg" alt="antena">
+                    </div>
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/code.jpg" alt="antena">
+                    </div>
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/electricity.jpg" alt="antena">
+                    </div>
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/math.jpg" alt="antena">
+                    </div>
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/mountains.jpg" alt="antena">
+                    </div>
+                    <div class="section-work-item">
+                        <img class="section-work-img" src="./img/ocean.jpg" alt="antena">
+                    </div>
+                </div>
                 <div class="section-footer"></div>
             </div>
         </section>
