Add skills section

--- a/index.html
+++ b/index.html
@@ -114,6 +114,47 @@
                 </div>
                 <div class="section-footer"></div>
             </div>
+            <div class="section-wrapper">
+                <div class="section-header">
+                    <div class="section-header-line"></div>
+                    <div class="section-header-title ">Skills</div>
+                </div>
+                <div class="section-content section-skills-content">
+                    <div class="section-skills-name">HTML</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-html"></div>
+                    </div>
+                    <div class="section-skills-name">CSS</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-css"></div>
+                    </div>
+                    <div class="section-skills-name">Java Script</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-js"></div>
+                    </div>
+                    <div class="section-skills-name">Python</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-python"></div>
+                    </div>
+                    <div class="section-skills-name">Git</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-git"></div>
+                    </div>
+                    <div class="section-skills-name">Software Testing</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-testing"></div>
+                    </div>
+                    <div class="section-skills-name">Robot Framework</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-robot"></div>
+                    </div>
+                    <div class="section-skills-name">Jenkins</div>
+                    <div class="section-skills-item">
+                        <div class="section-skills-line section-skills-jenkins"></div>
+                    </div>
+                </div>
+                <div class="section-footer"></div>
+            </div>
         </section>
     </main>
 
