--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
                 </div>
                 <div class="section-content section-work-content">
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/antena.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/antena.jpg" alt="antena">
                     </div>
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/code.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/code.jpg" alt="antena">
                     </div>
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/electricity.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/electricity.jpg" alt="antena">
                     </div>
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/math.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/math.jpg" alt="antena">
                     </div>
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/mountains.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/mountains.jpg" alt="antena">
                     </div>
                     <div class="section-work-item">
-                        <img class="section-work-img" src="./img/ocean.jpg" alt="antena">
+                        <img class="section-work-img" src="./img/work/ocean.jpg" alt="antena">
                     </div>
                 </div>
                 <div class="section-footer"></div>
@@ -151,6 +151,31 @@
                     <div class="section-skills-name">Jenkins</div>
                     <div class="section-skills-item">
                         <div class="section-skills-line section-skills-jenkins"></div>
+                    </div>
+                </div>
+                <div class="section-footer"></div>
+            </div>
+            <div class="section-wrapper">
+                <div class="section-header">
+                    <div class="section-header-line"></div>
+                    <div class="section-header-title ">Blog</div>
+                </div>
+                <div class="section-content section-about-content">My latest blog posts</div>
+                <div class="section-content section-blog-content">
+                    <div class="section-blog-item">
+                        <img class="section-blog-img" src="./img/blog/bike.jpg" alt="antena">
+                        <div class="section-blog-link"><p>Read More</p></div>
+                        <p class="section-blog-img-title">Product review</p>
+                    </div>
+                    <div class="section-blog-item">
+                        <img class="section-blog-img" src="./img/blog/mountain_trip.jpg" alt="antena">
+                        <div class="section-blog-link"><p>Read More</p></div>
+                        <p class="section-blog-img-title">Mountain trip</p>
+                    </div>
+                    <div class="section-blog-item">
+                        <img class="section-blog-img" src="./img/blog/training.jpg" alt="antena">
+                        <div class="section-blog-link"><p>Read More</p></div>
+                        <p class="section-blog-img-title">Training</p>
                     </div>
                 </div>
                 <div class="section-footer"></div>
