--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
     <meta name="description" content="CodersCamp to darmowy, otwarty kurs programowania webowego we Wrocławiu. Sprawdź, czego nauczysz się na CodersCamp i spróbuj swoich sił w branży IT!">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Castoro">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-
     <main>
         <nav>
             <div class="nav-wrapper">
                 <ul class="nav-container">
-                    <li>About me</li>
-                    <li>Work</li>
-                    <li>Skills</li>
-                    <li>Experience</li>
-                    <li>Blog</li>
-                    <li>Contact</li>
+                    <li><a href="#about_me">About me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#blog">Blog</a></li>
                 </ul>
             </div>
         </nav>
@@ -77,12 +75,19 @@
                     <div class="text-effect">&nbsp</div>
                 </div>
             </div>
+            <div class="icons-wrapper">
+                <a href="https://github.com/mariusz-sm" class="fa fa-github"></a>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
         </header>
         <section>
             <div class="section-wrapper">
                 <div class="section-header">
                     <div class="section-header-line"></div>
-                    <div class="section-header-title ">About me</div>
+                    <div id="about_me" class="section-header-title ">About me</div>
                 </div>
                 <div class="section-content section-about-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</div>
                 <div class="section-footer"></div>
@@ -90,7 +95,7 @@
             <div class="section-wrapper">
                 <div class="section-header">
                     <div class="section-header-line"></div>
-                    <div class="section-header-title ">Work</div>
+                    <div id="work" class="section-header-title ">Work</div>
                 </div>
                 <div class="section-content section-work-content">
                     <div class="section-work-item">
@@ -117,7 +122,7 @@
             <div class="section-wrapper">
                 <div class="section-header">
                     <div class="section-header-line"></div>
-                    <div class="section-header-title ">Skills</div>
+                    <div id="skills" class="section-header-title ">Skills</div>
                 </div>
                 <div class="section-content section-skills-content">
                     <div class="section-skills-name">HTML</div>
@@ -158,7 +163,7 @@
             <div class="section-wrapper">
                 <div class="section-header">
                     <div class="section-header-line"></div>
-                    <div class="section-header-title ">Blog</div>
+                    <div id="blog" class="section-header-title ">Blog</div>
                 </div>
                 <div class="section-content section-about-content">My latest blog posts</div>
                 <div class="section-content section-blog-content">
