Add mobile nav icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Castoro">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -17,10 +18,29 @@
         <nav>
             <div class="nav-wrapper">
                 <ul class="nav-container">
-                    <li><a href="#about_me">About me</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li>
+                        <a href="#about_me">
+                            <i class="material-icons md-48 nav-icon">perm_identity</i>    
+                            <span>About me</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#work">
+                            <i class="material-icons md-48 nav-icon">work_outline</i>    
+                            <span>Work</span>
+                        </a></li>
+                    <li>
+                        <a href="#skills">
+                            <i class="material-icons md-48 nav-icon">psychology</i>    
+                            <span>Skills</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#blog">
+                            <i class="material-icons md-48 nav-icon">chat_bubble_outline</i>    
+                            <span>Blog</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
