--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                             <span>Blog</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#contact">
+                            <i class="material-icons md-48 nav-icon">chat_bubble_outline</i>    
+                            <span>Contact</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -202,6 +208,30 @@
                         <div class="section-blog-link"><p>Read More</p></div>
                         <p class="section-blog-img-title">Training</p>
                     </div>
+                </div>
+                <div class="section-footer"></div>
+            </div>
+            <div class="section-wrapper">
+                <div class="section-header">
+                    <div class="section-header-line"></div>
+                    <div id="contact" class="section-header-title ">Contact</div>
+                </div>
+                <div class="section-content section-contact-content">
+                    <div class="section-contact-item">
+                        <!-- <i class="material-icons contact-icon">call</i> -->
+                        <a href="#" class="fa fa-phone"></a>
+                        <p class="section-contact-text">+38 849 09 76 02</p>
+                    </div>
+                    <div class="section-contact-item">
+                        <!-- <i class="material-icons contact-icon">email</i> -->
+                        <a href="#" class="fa fa-mail-reply"></a>
+                        <p class="section-contact-text">name.surmane@mail.com</p>
+                    </div>
+                    <div class="section-contact-item">
+                        <a href="#" class="fa fa-linkedin"></a>
+                        <p class="section-contact-text">Linkedin</p>
+                    </div>
+                    
                 </div>
                 <div class="section-footer"></div>
             </div>
