Add flex to contact container

--- a/index.html
+++ b/index.html
@@ -218,20 +218,17 @@
                 </div>
                 <div class="section-content section-contact-content">
                     <div class="section-contact-item">
-                        <!-- <i class="material-icons contact-icon">call</i> -->
-                        <a href="#" class="fa fa-phone"></a>
+                        <a href="#" class="fa fa-contact fa-phone"></a>
                         <p class="section-contact-text">+38 849 09 76 02</p>
                     </div>
                     <div class="section-contact-item">
-                        <!-- <i class="material-icons contact-icon">email</i> -->
-                        <a href="#" class="fa fa-mail-reply"></a>
+                        <a href="#" class="fa fa-contact fa-mail-reply"></a>
                         <p class="section-contact-text">name.surmane@mail.com</p>
                     </div>
                     <div class="section-contact-item">
-                        <a href="#" class="fa fa-linkedin"></a>
+                        <a href="#" class="fa fa-contact fa-linkedin"></a>
                         <p class="section-contact-text">Linkedin</p>
-                    </div>
-                    
+                    </div> 
                 </div>
                 <div class="section-footer"></div>
             </div>
