--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </li>
                     <li>
                         <a href="#contact">
-                            <i class="material-icons md-48 nav-icon">chat_bubble_outline</i>    
+                            <i class="material-icons md-48 nav-icon">call</i>    
                             <span>Contact</span>
                         </a>
                     </li>
